--- a/aps4/package.xml
+++ b/aps4/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>aps4_222</name>
+  <name>aps4</name>
   <version>2.2.2</version>
   <description>The package to work on</description>
 
